tests/14.deployment_single_replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: single-replica-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: app-container
        image: myimage:latest
