tests/15.pod_privilege_escalation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  containers:
  - name: example-container
    image: some-image
    securityContext:
      allowPrivilegeEscalation: true
