tests/34.echo1_load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo1-load-balancer
  namespace: custom-namespace
spec:
  type: LoadBalancer
  selector:
    name: echo1-load-balancer
  ports:
  - port: 80
    targetPort: 8080
  automountServiceAccountToken: false
  securityContext:
    allowPrivilegeEscalation: false
    readOnlyRootFilesystem: true
    runAsNonRoot: true
    capabilities:
      drop:
      - ALL
