tests/docker-bench-security.deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: docker-bench-security
  labels:
    name: docker-bench
spec:
  selector:
    matchLabels:
      name: docker-bench
  template:
    metadata:
      labels:
        name: docker-bench
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      securityContext:
        runAsUser: 0
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        capabilities:
          drop:
          - ALL
      containers:
      - name: docker-bench
        image: madhuakula/hacker-container
        imagePullPolicy: Always
        command:
        - /bin/sh
        - -c
        - sleep infinity
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            cpu: 50m
            memory: 80Mi
        securityContext:
          privileged: false
          capabilities:
            add:
            - AUDIT_CONTROL
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - ps aux | grep sleep | grep -v grep
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: var-lib-vol
          mountPath: /var/lib
          readOnly: true
        - name: usr-lib-systemd-vol
          mountPath: /usr/lib/systemd
          readOnly: true
        - name: etc-vol
          mountPath: /etc
          readOnly: true
        - name: lib-systemd-system-vol
          mountPath: /lib/systemd/system
          readOnly: true
        - name: usr-bin-contained-vol
          mountPath: /usr/bin/containerd
          readOnly: true
        - name: usr-bin-runc-vol
          mountPath: /usr/bin/runc
          readOnly: true
        - name: docker-sock-volume
          mountPath: /var/run/docker.sock
          readOnly: true
      volumes:
      - name: var-lib-vol
        hostPath:
          path: /var/lib
      - name: usr-lib-systemd-vol
        hostPath:
          path: /usr/lib/systemd
      - name: etc-vol
        hostPath:
          path: /etc
      - name: lib-systemd-system-vol
        hostPath:
          path: /lib/systemd/system
      - name: usr-bin-contained-vol
        hostPath:
          path: /usr/bin/containerd
      - name: usr-bin-runc-vol
        hostPath:
          path: /usr/bin/runc
      - name: docker-sock-volume
        hostPath:
          path: /var/run/docker.sock
          type: DirectoryOrCreate
      automountServiceAccountToken: false
